--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -31,8 +31,8 @@
         body {
             margin: 0;
             font-family: 'Arial', sans-serif;
-            background-color: #121212;
-            color: #f5f5f5;
+            background-color: #f5f5f5;
+            color: #121212;
             overflow-x: hidden;
         }
 
@@ -41,7 +41,7 @@
         }
 
         header {
-            background-color: #1E1E2E;
+            background-color: #f0f0f0;
             padding: 20px;
             text-align: center;
             top: 0;
@@ -58,7 +58,7 @@
         }
 
         header p {
-            color: #c0c0c0;
+            color: #333;
             margin-top: 10px;
             font-size: 1.1rem;
             animation: slideIn 2s;
@@ -105,7 +105,7 @@
         }
 
         #features {
-            background-color: #24243e;
+            background-color: #e3e3e3;
         }
 
         #features h2 {
@@ -117,7 +117,7 @@
             margin-top: 20px;
             font-size: 1rem;
             line-height: 1.6;
-            color: #b3b3b3;
+            color: #333;
             animation: fadeIn 3s;
         }
 
@@ -143,7 +143,7 @@
         }
 
         #login {
-            background-color: #28293e;
+            background-color: #f7f7f7;
         }
 
         #login h2 {
@@ -168,11 +168,11 @@
         }
 
         #about {
-            background-color: #2E4057;
+            background-color: #d3dbe3;
             padding: 30px;
             text-align: center;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         #about h2 {
@@ -182,7 +182,7 @@
         }
 
         #about p {
-            color: #e3e3e3;
+            color: #121212;
             margin-top: 20px;
             font-size: 1rem;
             line-height: 1.6;
@@ -206,7 +206,7 @@
         }
 
         #additional-info {
-            color: #e3e3e3;
+            color: #121212;
             margin-top: 20px;
             font-size: 1rem;
             line-height: 1.6;
@@ -224,7 +224,7 @@
             max-width: 600px;
             margin-left: auto;
             margin-right: auto;
-            color: #e3e3e3;
+            color: #121212;
         }
 
         #about-features h3 {
@@ -252,11 +252,11 @@
 
         /* Contact Section */
         #contact {
-            background-color: #37474F;
+            background-color: #C1D3D8;
             padding: 30px;
             text-align: center;
             border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         #contact h2 {
@@ -266,7 +266,7 @@
         }
 
         #contact p {
-            color: #ececec;
+            color: #121212;
             margin-top: 20px;
             font-size: 1rem;
             line-height: 1.6;
@@ -340,10 +340,10 @@
         }
 
         footer {
-            background-color: #1E1E2E;
+            background-color: #f0f0f0;
             padding: 10px;
             text-align: center;
-            color: #6c6c6c;
+            color: #121212;
             font-size: 0.9rem;
         }
 
@@ -397,7 +397,7 @@
             left: 0;
             width: 100%;
             height: 50%;
-            background-color: #1f1f30;
+            background-color: #2c2c2c;
             z-index: 9998;
             display: flex;
             justify-content: center;
@@ -452,13 +452,17 @@
             cursor: pointer;
         }
 
+        #download-overlay p {
+            color:whitesmoke
+        }
+
         #blur-bg {
             position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: rgba(255, 255, 255, 0.5);
             backdrop-filter: blur(5px);
             z-index: 9997;
             display: none;
@@ -471,17 +475,17 @@
             margin: 0;
             padding-top: 400px;
             width: 220px;
-            background-color: #1E1E2E;
+            background-color: #f0f0f0;
             position: fixed; /* Keeps the sidebar fixed on the screen */
             height: 100%;
             overflow: auto;
             z-index: 6000; /* Ensures it appears above other content */
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2); /* Optional: adds a shadow effect for better visibility */
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1); /* Optional: adds a shadow effect for better visibility */
         }
 
         .sidebar a {
             display: block;
-            color: #f5f5f5;
+            color: #121212;
             padding: 16px;
             text-decoration: none;
             transition: background-color 0.3s;
@@ -493,8 +497,8 @@
         }
 
         .sidebar a:hover:not(.active) {
-            background-color: #37374F;
-            color: #FFF;
+            background-color: #f2f2f2;
+            color: #121212;
         }
 
         div.content {
@@ -532,7 +536,7 @@
         #download {
             padding: 40px;
             text-align: center;
-            background-color: #121212; /* Light background to contrast the content */
+            background-color: #f5f5f5; /* Light background to contrast the content */
             position: relative;
         }
 
@@ -621,27 +625,10 @@
 
             section p {
                 font-size: 1rem;
-                line-height: 1.5;
-            }
-
-            /* Adjust button sizes */
-            button {
-                font-size: 1rem;
-                padding: 12px 25px;
-            }
-
-            /* Avoid margins between sections */
-            #download, #login, #about, #contact {
-                margin: 0;
-                padding: 20px 15px;
-            }
-            #features {
-                padding: 20px 15px;
-                height: 70%;
             }
         }
-        
-    </style>
+</style>
+
 </head>
 <body>
 
