--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Future Notes: A modern app for organizing your thoughts, plans, and ideas. Access notes anywhere and stay productive.">
     <meta name="keywords" content="Notes App, Future Notes, Productivity App, Organize Thoughts, Notes on Windows">
     <meta name="author" content="Nathan Cappellen">
-    <title>Future Notes</title>
+    <title>Future Notes - Homepage</title>
     <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16x16.png">
